--- a/rel/sys.config
+++ b/rel/sys.config
@@ -1,7 +1,18 @@
+%% This is an Erlang config file, which has [{AppName, [{AppKey, AppValue}, ...]}, {...}]
+%% This is different from a CT config file, which can contain any number of elements like: {CfgVarName, Value}.
+%% Include this with "-config <path>" *after* the -erl_args flag, if using in tests,
+%% otherwise, just use -config rel/sys.config
+%% e.g. CT_OPTS="-config test/test.config -erl_args -config rel/sys.config"
+
 [{gerlshmud,
  [
   {port, 8081}
  ]},
+
+ {kernel,
+  [
+  {logger_level, debug}
+  ]
 
  {mnesia,
   [
