--- a/test/test.config
+++ b/test/test.config
@@ -1,1 +1,5 @@
+%% This is a CT config file, which can contain any number of elements like: {CfgVarName, Value}.
+%% This is different from an Erlang config file, which has [{AppName, [{AppKey, AppValue}, ...]}, {...}]
+%% Include this with "-config <path>" *before* the -erl_args flag
+
 {port, 8081}.
